Bug 28260 - io/tst-closefrom, misc/tst-close_range, posix/tst-spawn5 fail if stray fds are open
Summary: io/tst-closefrom, misc/tst-close_range, posix/tst-spawn5 fail if stray fds ar...
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: build (show other bugs)
Version: 2.34
: P2 normal
Target Milestone: 2.35
Assignee: Adhemerval Zanella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-24 11:21 UTC by Michael Hudson-Doyle
Modified: 2021-08-26 20:14 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Hudson-Doyle 2021-08-24 11:21:47 UTC
All these tests start by opening /dev/null 100 times and fail if this does not yield a continuous run of fds. But it turns out that under Ubuntu/Debian's autopkgtest runners, the test process inherits fds 62 and 63 so there is a gap in the fds. Log here: https://autopkgtest.ubuntu.com/results/autopkgtest-impish/impish/amd64/o/openzwave/20210819_143410_8cad1@/log.gz

It feels like failing the test in this situation is not helpful. Maybe the tess should skeip. Or open_multiple_temp_files could be a little smarter and just keep on opening /dev/null until it gets NFDS fds in a row. Or something.
Comment 1 Adhemerval Zanella 2021-08-24 11:49:42 UTC
I was already raised upstream, I will send a patch to fix it.
Comment 2 Adhemerval Zanella 2021-08-26 20:14:23 UTC
Fixed on 2.35.